Cleaned up error handling wrt gui logging a bit.
The excepthook argument to gtklogger.replay() no longer seems
to be necessary, at least in the way oof2 uses it, so I commented
it out of guilogger.py.  It's still in gtklogger/replay.py because
it might be needed if anyone else ever uses gtklogger.  I updated
the README.

gtklogger.replay() now re-raises exceptions that it catches, after
aborting the log player.

Added a divide by zero test in the Help/Debug/Error menu, to see
how gtklogger would handle it.

--- a/SRC/common/IO/GUI/gtklogger/README
+++ b/SRC/common/IO/GUI/gtklogger/README
@@ -150,10 +150,7 @@ arguments to gtklogger.replay are:
               The function should return True if it has
               handled the exception, and False if the exception
               should be propagated further.  In either case, no
-              more lines will be executed from the log file.  Note
-              that the function will be called from within a
-              gtk.threads_enter(), gtk.threads_leave() pair if
-              threaded==True.
+              more lines will be executed from the log file.
   rerecord:   See below
   checkpoints: Boolean, indicating if checkpoints should be respected
                (default is True).
