--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -3,6 +3,11 @@ OOF2 2.1.20
 * Fixed a bug in Basic solver mode, which was trying to use an old
   solver for asymmetric matrices.
 
+* Changed the Rationalize Skeleton modifier.  The old version could
+  end up in an infinite loop.  Now it takes an "iterations" argument,
+  and repeats that many times.  Each iteration is potentially less
+  effective than the old method, but will is sure to finish.
+
 OOF2 2.1.19
 
 * Added output for von Mises stress.
