The default preconditioner for all iterative solvers is ILUT.
The BiCG solver used to be just an alias for BiCGStab. (Eigen only
offers BiCGStab, and we kept the BiCG class for backward compatibility.)
To make the interface cleaner I made BiCG a secret registered class.
When called from scripts it should still invoke BiCGStab.

I accidentally included the new SRC/engine/matrixmethod.py in
the previous commit about to_string, and then I tried to have
git move it to this commit, but I don't think it worked.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -3,6 +3,13 @@
 * Meshes are drawn by default at their actual position.  The default
   behavior can be changed in the settings menu.
 
+* The preconditioner used by the basic solver mode is now ILUT, not
+  Jacobi.
+
+* The BiCG solver, which is just an alias to BiCGStab, doesn't appear
+  in the GUI any more.  It's still usable from scripts (I think), for
+  backwards compatibility.  BiCGStab is still there.
+
 2.2.1/2
 
 * Fixes to the build systems to get it to work with MacPorts.
