Fixed a comment and added a TODO.

--- a/SRC/common/IO/GUI/gtklogger/README
+++ b/SRC/common/IO/GUI/gtklogger/README
@@ -246,7 +246,7 @@ code.  writeLine(str) takes a string argument and puts that string in
 the log file.  replayDefine(obj, name) takes a Python object and
 inserts it in the namespace in which log files are executed.  "name"
 is an optional argument that can be given if the object's name in the
-replay namespace should be different from it's name in the calling
+replay namespace should be different from its name in the calling
 namespace.  (If obj is not a class or function, name is required.)
 
 For example, say that you're using a third party widget library and
