More improvements to skeleton refinement.
There was a TODO about rationalizing the "criterion" parameter for
SkeletonModifiers, which meant different things in different contexts.
For Refine, the criterion didn't do much, so I deleted it.  Instead,
now all of the SegmentDivider classes take a "minlength" parameter.
They won't create new segments smaller than minlength.  Previously,
only TransitionPoints had a minlength.   This effectively does the
same thing that criterion did, by providing a lower size cutoff for
refinement.

Added a norm2 method to Point.

Updated the reference files for periodic transition point refinement.
The test file had referred to the temporary Snap Refine II modifier,
which doesn't exist anymore, so the tests weren't being run.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -44,6 +44,13 @@
       best one.  The Large rule set considers many more possibilities,
       and chooses the one with the lowest "energy".
 
+  The "criterion" parameter has been removed.  It allowed you to
+  exclude elements below a certain area.  It was inconsistent with the
+  "criterion" parameter in other skeleton modifiers.  Instead, there
+  is a "minlength" subparameter in the divider.  Existing element
+  edges will not be subdivided into segments less than minlength (but
+  new internal edges may be shorter).
+
 * The number of digits of floating point numbers displayed in the GUI
   can be set with the "GUI Digits" item in the Settings menu.
 
