--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,12 +1,13 @@
 
 2.3.0
 
-* Upgrade to Python3 from Python2.
+* Upgrade to Python3 from Python2.  Python 3.8 or later is required.
 
 * Use cmake for building.
 
-* Moved the SRC/engine/property tree to SRC/engine/properties, and
-  renamed properties.swg to property.swg.
+* OOFCanvas version 1.1.0 or later is now required.
+
+* Swig 4.0 or later is now required.
 
 * The Next button in the tutorial window is always sensitive.  If you
   want to go ahead without completing a task, it's up to
@@ -66,8 +67,6 @@
 
 * The Snap Anneal skeleton modifier has been removed. It was mostly
   redundant with Snap Nodes.
-
-* OOFCanvas version 1.1.0 or later is now required.
 
 2.2.3
 
