--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,9 @@
+OOF2 2.3.2
+
+* Fixed a bug that was preventing strain components from being
+  displayed in the GUI or looped over in python.
+
+
 OOF2 2.3.1
 
 * Changed the names of user-settable variables in CMakeLists.txt, so
