--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,11 @@
+OOF2 2.3.2
+
+* Fixed a bug in the file selector.  It wasn't properly handling
+  special characters in file names.
+
+* Fixed a bug that was preventing Range outputs from being computed on
+  edge boundaries and cross sections.
+
 OOF2 2.3.1
 
 * Changed the names of user-settable variables in CMakeLists.txt, so
