--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -6,6 +6,8 @@ OOF2 2.3.2
 * Fixed a bug that was preventing Range outputs from being computed on
   edge boundaries and cross sections.
 
+* Fixed a bug in reading the antialias state from a file.
+
 OOF2 2.3.1
 
 * Changed the names of user-settable variables in CMakeLists.txt, so
