--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -11,6 +11,8 @@ OOF2 2.3.2
 
 * Fixed a bug in reading the antialias state from a file.
 
+* Fixed a problem in displaying orientation maps as images.
+
 OOF2 2.3.1
 
 * Changed the names of user-settable variables in CMakeLists.txt, so
