Changed the version number in CMakeLists.txt, and updated the change log for the recent bug fix.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,8 @@
+OOF2 2.3.3
+
+* Disabled selection of interface segments since interface properties
+  aren't enabled.
+
 OOF2 2.3.2
 
 * Eliminated some opportunities for roundoff error in Rationalize that
