Added a test for the DirectorWidget bug, and put the fix in the changelog.
Also deleted DirectorWidget.selection(), because it's now the same
as the base class method.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -14,6 +14,9 @@ OOF2 2.3.3
   OOF.Settings.Mesh_Defaults.Numerical_Differentiation to
   OOF.Settings.Solver.Numerical_Differentiation.
 
+* Fixed a bug in the GUI for the "New" button on the Skeleton
+  Boundaries page.
+
 OOF2 2.3.2
 
 * Eliminated some opportunities for roundoff error in Rationalize that
