Made the skeleton selection tools consistent in the way they handle lists of points.
Some of the tools, like OOF.Graphics_n.Toolbox.Select_Element.Ellipse
and its friends, have an argument that is a list of points. Most of
them use two points from the list.  Some of them used the first two,
and some used the first and last.  Now they all use the first and
last.

This change probably affects nobody, but it makes the documentation
easier to write.  The GUI generates lists with only two points when
only two are needed, so the second and last points were identical.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -20,6 +20,12 @@ OOF2 2.3.3
 * Fixed a bug that was preventing boundary condition initializers
   from being copied.
 
+* All of the skeleton selection commands that have a list of points as
+  an argument but only use two of them now use the first and the last
+  points.  It was inconsistent before.  This probably doesn't matter to
+  anyone because the GUI only put two points in the list.  But if you
+  edited scripts and added points to a list it might have an effect.
+
 OOF2 2.3.2
 
 * Eliminated some opportunities for roundoff error in Rationalize that
