Incremental progress on the new extension building machinery.
Finished the renaming process for property templates and started
writing the cmake files templates.  The property templates themselves
haven't been updated yet.

oof2-extension-setup might copy the files to the right places now,
but it hasn't been tested yet.

--- a/EXTENSION_TEMPLATES/TODO
+++ b/EXTENSION_TEMPLATES/TODO
@@ -1,7 +1,10 @@
-Rename copy_extension.py to "oof2_extension_setup.py".  Install it
-into bin when OOF2 is installed.  It should know OOF2_PYTHON3_VERSION
-and OOF2_SWIG_VERSION, and CMAKE_INSTALL_PREFIX from the OOF2 build.
-Make oof2_extension_setup executable
+Install oof2_extension_setup.py into bin when OOF2 is installed.  It
+should know OOF2_PYTHON3_VERSION and OOF2_SWIG_VERSION, and
+CMAKE_INSTALL_PREFIX from the OOF2 build.  Make oof2_extension_setup
+executable.  DONE
+
+For the cmake file in extensions to find the cmake definitions in
+OOF2, the script will need to know the oof2 source directory location.
 
 Install the templates into <prefix>/share/oof2/templates.
 
@@ -10,25 +13,31 @@ copy files from the share directory.
 
 Files in <prefix>/share/oof2/templates:
    CMakeLists.txt
+   CMakeLists_subdir.txt
    README
    template-name/     [for each template]
-       CMakeLists.txt
        template-name.C
        template-name.h
        template-name.swg
        template-name.spy
 
 In the directory where oof2_extension_setup is run, create:
-  README
   module/
+     README 
      CMakeLists.txt
+     oofbuildtools.cmake
      source/
-        CMakeLists.txt
+        CMakeLists.txt   (from CMakeLists_subdir.txt)
         module.C
         module.h
         module.swg
         module.spy
      build/
+
+oofbuildtools.cmake needs to be copied because if oof2 was installed
+by a package manager, the oof2 source directory might not be present
+or accessible.  That means that all of the oof2 header files need to
+be installed too.
 
 DON'T overwrite files in module if they already exist, because that
 would overwrite the user's edits, unless --force is given.
