--- a/EXTENSION_TEMPLATES/README
+++ b/EXTENSION_TEMPLATES/README
@@ -7,44 +7,29 @@
  * oof_manager@nist.gov.
  */
 
-This directory contains extensions to OOF2.  It requires OOF2 version
-2.3.0 or later.
+This directory contains templates for building extensions to OOF2, in
+particular new types of Properties.  It requires OOF2 version 2.3.3 or
+later.  To use the templates, run the oof2-extension-setup command,
+which was installed when oof2 was installed.  Do not try to build and
+run the files in these directories directly!
 
-The easiest way to add your own nonlinear and nonconstant material
-properties to OOF2 is to edit an existing example.  This directory
-contains examples of seven different properties.  Six of them,
-  general_nonlinear_elasticity_example
-  nonconstant_force_density_example
-  nonconstant_heat_source_example
-  nonlinear_force_density_example
-  nonlinear_heat_conductivity_example
-  nonlinear_heat_source_example
-contain template code that can be converted into an actual OOF2
-Property by running the oof2_extension_setup script and editing the
-resulting files.  Do not try to build and run the files in these
-directories directly!  The ramberg-osgood directory contains a
-nonlinear Property that can be used without modification.
+Some of the extension templates make use of Property base classes in
+the main OOF2 program, and are designed to make it easy to change the
+form of a Property's nonlinearity or variability, without requiring
+the user to be familiar with the full Property API.
 
-The remainder of this file contains instructions for using
-oof2_extension_setup.py and customizing the resultant Property code.
+(0) Create a directory for your extension module's source code.  The
+    directory should be outside of the OOF2 source directory so that
+    it's not overwritten if a new version of OOF2 is installed.
+    Multiple extensions may share the same directory.
 
-These Properties make use of Property base classes in the main OOF2
-program that are designed to make it easy to change the form of a
-Property's nonlinearity or variability, without requiring the user to
-be familiar with the full Property API.  As a result, these Properties
-may not be suitable for all applications.
+(1) In a terminal window, cd to the directory you created in the
+    previous step and run oof2-extension-setup there:
 
-(0) Create a directory for your extension module's source code, and cd
-    to it.  The directory should be outside of the OOF2 source
-    directory so that it's not overwritten if a new version of OOF2 is
-    installed.  Multiple extensions may share the same directory.
+      oof2-extension-setup --template=nonconstant_force_density_example
 
-(1) Make a copy of the example code by running the oof2_extension_setup.py
-    script, like this:
-       oof2_extension_setup --template=nonconstant_force_density_example
-
-    It has three required arguments (although for simplicity only the
-    template argument was shown above):
+    oof2-extension-setup has three required arguments (although for
+    simplicity only the template argument was shown above):
 
     --template=<directory name>
          The template directory to copy.  It is one of the
@@ -62,75 +47,133 @@ may not be suitable for all applications.
     There are also some optional arguments:
 
     --sequenceno=<number>
-         Determines the ordering of this property in the GUI. Larger
-         numbers appear later.  The default value is 1000, which will
-         put it after any predefined Properties.
+         This determines the ordering of this property in the
+         GUI. Larger numbers appear later.  The default value is 1000,
+         which will put it after any predefined Properties.
     --force
-	 If this is present, oof2_extension_setup will overwrite
+    	 If this option is given, oof2-extension-setup will overwrite
 	 existing files.
 
 (2) Step 1 created a directory whose name was given by the --module
     argument.  It contains a CMakeLists.txt file, a source directory,
     and empty "build" directory, Change to the source subdirectory.
 
-(3) Inside the source subdirectory there is be a C++ file whose name
-    is the name of the module, plus ".C".  Edit this file and follow
-    the instructions inside it.  This is where the definitions of your
-    own particular nonlinearity go.
+(3) Inside the source subdirectory there are four files with the name
+    of the module, plus a suffix: ".C" for C++ code, ".h" for C++
+    headers, ".swg" for swig code, and ".spy" for python code that's
+    imported into the swig file.  The files contain notes about what
+    you will need to change.  In particular, edit the .C file to
+    change the functions that determine the behavior of the Property
+    class.
+
+    For more information, see the on-line OOF2 manual.
 
 (3a) If you need to add, remove, or change the Property's parameters
-    (parameters which will be settable via the GUI and/or scripts),
-    you'll need to change the Property's constructor and its
-    arguments.  Change the .h and .swg files so that they're
-    consistent with the .C file.  You'll also have to change the
-    parameter list in the PropertyRegistration in the .spy file.
-
-(3c) If you want to change where the Property appears in the hierarchy
-     in the Material page, edit the first argument of the
+     (parameters which will be settable via the GUI and/or scripts),
+     you'll need to change the Property's constructor and its
+     arguments, in all four files in the source directory.  Change the
+     parameters in the argument list of the constructor, which appears
+     in the .C, .h, and .swg files.  The constructor should store the
+     values of the parameters as data in the Property object.  Change
+     the .h and .swg files so that they're consistent with the .C
+     file.  You'll also have to change the parameter list in the
      PropertyRegistration in the .spy file.
 
-(3d) If you need to add new C++ source files or header files in the
-     build directory, add them to the lists in CMakeLists.txt in the
-     build directory.
+(3b) If you want to change where the Property appears in the hierarchy
+     in the Material page, edit the "name" parameter of the
+     PropertyRegistration in the .spy file.  "name" is string in which
+     colons mark the levels of the Property hierarchy, as displayed on
+     the OOF2 Materials page.  To change where the Property is listed
+     among other Properties at the same level of the hierarchy, change
+     the "ordering" parameter.
 
-(4) Move to the empty build directory.  Run "ccmake ..", and press "c"
-    to do the initial configuration.  Set
+(3c) Do not change the propertyType in the PropertyRegistration.
 
-       * OOF2_PYTHON3_VERSION: the version of Python that was used to
-          build OOF2.  This is preset from the value used to build
-          OOF2 and should probably not be changed.
-       *  OOF2_SWIG_VERSION: the version of Swig that was used to build
-          OOF2. This is also preset from the value used to build
-          OOF2 and should also probably not be changed.
-       * CMAKE_INSTALL_PREFIX: the location where the extension should
-          be installed.  This does *not* have to be the location where
-          OOF2 was installed.
-    Press "c" to configure the build.
-    Press "g" to generate the Makefile and exit ccmake.
+(3d) If you need to add new C++ source files, you can put them in the
+     source directory and add them to the SOURCES list in
+     CMakeLists.txt in that directory.
+
+(4) Move to the empty build directory.  Type
+        ccmake ..
+    to start CMake, and press "c" to do the initial configuration.
+    You probably don't need to change any parameters other than
+    CMAKE_INSTALL_PREFIX and CMAKE_BUILD_TYPE.
+
+    * CMAKE_BUILD_TYPE can be either Release or Debug.
+
+    * CMAKE_INSTALL_PREFIX is the name of directory into which the
+      extension will be installed.  It does *not* have to be the
+      directory where OOF2 is installed.  When the extension is built,
+      a subdirectory named by the module name that you used in step
+      (1) will be created within the directory.
+
+    * OOF2_PYTHON3_VERSION is preset to the version of Python that was
+      used to build OOF2.  You should not have to change this, unless
+      you are re-using a Property that you originally created with a
+      different version of Python.  Make sure that the version of
+      Python used here is the same as the one that was used when OOF2
+      was built.
+
+    * OOF2_SWIG_VERSION is preset to the version of swig that was used
+      to build OOF2.  You should not have to change this unless you
+      are rebuilding your extension after having rebuilt OOF2 with a
+      different version of swig.
+
+    Press "c" to configure the build.  If you change any parameters,
+    press "c" again.  Press "g" to generate the Makefile and exit
+    ccmake.
 
 (5) Run "make" and "make install".  If you're installing into a
-    system  directory, use "sudo make install" instead.
+    system  directory, run "sudo make install" instead.
 
-(6) If CMAKE_INSTALL_PREFIX was not the same location where OOF2 was
-    installed, set the PYTHONPATH enviroment variable, as described in
-    the OOF2 manual and README file.
-     
-(5) Run OOF2 and load your extension.  One way to do this is
-    to put it on the command line, like this:
-        oof2 --import <module>
-    where <module> is the name you assigned to the --module arg to
-    copy_extension.
+(6) The directory where the extension is installed, named by
+    CMAKE_INSTALL_PREFIX, needs to be in Python's path, the list of
+    directories where it searches for modules.  You can print the
+    default value of the path by typing
+       python -c "import sys; print(sys.path)"
+    in a terminal window.  If the extension directory isn't listed,
+    you will need to add it.  There are a number of ways to do that.
 
-    If you want it to load every time you run OOF2, put this line in a
-    file named ".oof2rc" in your home directory:
-        import <module>
-    Don't put any spaces at the beginning of the line.
+    (a) When you run oof2, use the --pathdir option to add the
+        directory, eg
+           oof2 --pathdir=~/oof2extensions
+        if the extension was installed oof2extensions in your home
+        directory.
+	
+    (b) Set the PYTHONPATH environment variable in the Unix shell.
+        The way to do that depends on which shell you use.  In bash,
+	for example, before running oof2 you could type
+	    export PYTHONPATH=$PYTHONPATH:<prefix>
+        where <prefix> is the value of CMAKE_INSTALL_PREFIX.  This
+	will set PYTHONPATH for all future commands run in the current
+	terminal window.  To make that change permanent, put the
+	"export" line in the .profile file in your home directory.
 
-    You can also use the "File/Load/Script..." menu item to load the file
-       <prefix>/library/<python3.x>/site-packages/<module>/__init__.py
-    where <prefix> means the directory you specified with
-    CMAKE_INSTALL_PREFIX when building the extension and <python3.x>
-    is your python version.  If you didn't set CMAKE_INSTALL_PREFIX,
-    then <directory> may vary depending on your operating system and
-    python variety, but /usr/local is a good guess.
+    (c) Edit the .oof2rc file in your home directory, and add the line
+            sys.path.append("<prefix>")
+        where <prefix> is the value of CMAKE_INSTALL_PREFIX.  This
+        will change the path for all future oof2 sessions, but not for
+        any other uses of Python.  However it won't work if you load your
+	extension module with --import (see below).
 
+(7) Run OOF2 and load your extension.  One way to do this is start
+    oof2 with the --import flag:
+       oof2 --import <module>
+    where <module> is the name you assigned to the --module option
+    when you ran oof2-extension-setup. You can also use the
+    File/Load/Module command in the main OOF2 menu bar, or type
+       import <module>
+    in the OOF2 Console window.  Because modules loaded with --import
+    are loaded before .oof2rc is read, --import will not work if
+    it requires a path that was set in .oof2rc.
+
+    If you want to load the extension every time you run OOF2, put
+       OOF.File.Load.Module(module="<module>")
+    in the .oof2rc file in your home directory. In this case, it makes
+    sense to set the path in .oof2rc as well.
+
+    An important difference between using the menu command and using
+    the bare "import" statement or --import option is that the menu
+    command will be logged.  If you save a log of your oof2 session
+    (File/Save/Python Log...) and reload it, the extension will not
+    be imported unless it was logged.
