More work on extensions.
The Ramberg-Osgood extension now compiles and loads.  I haven't
checked that it actually works yet, but its parameters can be set.

I changed the name of the Ramberg-Osgood directory from
ramberg-osgood to ramberg_osgood.  The files in all used
an underscore instead of a dash, and things like
"import ramberg-osgood.ramberg_osgood" looked silly.

Moved the "autoload" flag into runtimeflags.py and deleted
autoload.py.  It didn't need special treatment.

--- a/SRC/EXTENSIONS/ramberg_osgood/README
+++ b/SRC/EXTENSIONS/ramberg_osgood/README
@@ -10,7 +10,10 @@
 # with its operation, modification and maintenance. However, to
 # facilitate maintenance we ask that before distributing modified
 # versions of this software, you first contact the authors at
-# oof_manager@nist.gov. 
+# oof_manager@nist.gov.
+
+TODO: Update this file.  Update the rest of the ramberg-osgood code
+for cmake.
 
 
 
