Fixed various problems with the Ramberg-Osgood extension.
Updated the example.log example, which was still python2 and using
very old OOF menu items.  I don't think it's giving correct answers,
but the extension compiles and runs, which is what I was aiming for.

I deleted the README file, because it was about external extensions,
which this isn't anymore.

--- a/SRC/EXTENSIONS/ramberg_osgood/readme.tex
+++ b/SRC/EXTENSIONS/ramberg_osgood/readme.tex
@@ -12,9 +12,8 @@
 
 This software package provides a particular form of nonlinear
 elasticity property for the OOF software.  It is written as an OOF
-extension, and so needs to be separately built and installed in order
-to run within OOF.  It is compatible with the 2.1 version of the
-OOF code base.
+internal extension, so it is not loaded by default when oof is run.
+See the manual for more on OOF extensions.
 
 \section{Constitutive Rule}
 
